--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "es6-karma-jasmine-webpack-istanbul-boilerplate",
+  "name": "jspm-project",
   "version": "0.1.0",
-  "description": "Boilerplate for ES6 client-based library. Uses Babel and webpack for transpiling and building, Karma and Jasmine for unit testing, and Istanbul for code coverage.",
+  "description": "",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/dcroitoru/es6-karma-jasmine-webpack-istanbul-boilerplate"
+    "type": "git"
   },
   "scripts": {
     "test": "karma start karma.conf.js",
     "lint": "eslint ./frontend/js",
-    "start": "start http://localhost:8000/ & webpack-dev-server",
+    "start": "start http://localhost:8080/ & webpack-dev-server",
     "build:dev": "webpack --config webpack.dev.config.js",
     "build:prod": "webpack --config webpack.prod.config.js",
     "build": "npm run build:dev",
@@ -39,6 +38,7 @@
     "eslint": "^3.19.0",
     "eslint-loader": "^1.7.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "html-test-loader": "0.0.1",
     "html-webpack-plugin": "^2.28.0",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine": "^2.5.3",
@@ -49,12 +49,15 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.3",
+    "scsslint-loader": "^0.1.1",
+    "sourcemap-istanbul-instrumenter-loader": "^0.2.0",
     "style-loader": "^0.16.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
