--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "test": "karma start karma.conf.js",
-    "lint": "eslint ./frontend/js",
+    "lint": "eslint src/js; exit 0",
     "start": "start http://localhost:8080/ & webpack-dev-server",
     "build:dev": "webpack --config webpack.dev.config.js",
     "build:prod": "webpack --config webpack.prod.config.js",
@@ -34,12 +34,15 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.7.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "html-minify-loader": "^1.1.0",
     "html-test-loader": "0.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "install": "^0.8.8",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine": "^2.5.3",
     "jasmine-core": "^2.5.2",
@@ -53,6 +56,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.2",
     "node-sass": "^4.5.2",
+    "npm": "^4.4.4",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.3",
