--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "karma start karma.conf.js",
     "lint": "eslint src/js; exit 0",
-    "start": "start http://localhost:8080/ & webpack-dev-server",
+    "start": "start http://localhost:8080/ & webpack-dev-server --content-base public",
     "build:dev": "webpack --config webpack.dev.config.js",
     "build:prod": "webpack --config webpack.prod.config.js",
     "build": "npm run build:dev",
