--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Denis Croitoru",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.24.1",
@@ -58,6 +59,8 @@
     "node-sass": "^4.5.2",
     "npm": "^4.4.4",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "postcss-custom-properties": "^5.0.2",
+    "postcss-loader": "^1.3.3",
     "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.3",
     "scsslint-loader": "^0.1.1",
